[tool.poetry]
name = "trip_planner_agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
crewai = "^0.27.2"
streamlit = "^1.33.0"
openai = "^1.16.2"
unstructured = "^0.13.2"
pyowm = "^3.3.0"
tools = "^0.1.9"
pytest = "^8.1.1"
crewai-tools = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"